# chat-with-codebase-rag

./: docker-compose.yml  main.py  pyproject.toml
.streamlit/: config.toml
app/: main.py
app/cache/: __init__.py  redis_cache.py
app/core/: __init__.py  config.py
app/exceptions/: __init__.py  exception_handler.py
app/models/: __init__.py  chat_schemas.py  llms.py  schemas.py
app/prompts/: __init__.py
app/rag/: __init__.py  document_loader.py  text_preprocessor.py  vector_store_builder.py
app/routes/: __init__.py  check_collection_route.py  history_route.py  home_route.py  knowledge_route.py  response_route.py
app/services/: __init__.py  rag_service.py  response_service.py
interface/: chat_ui.py  main_ui.py  utils.py
notebooks/: rag.ipynb
ui/interface/: chat_interface.py
