[project]
name = "chat-with-codebase-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-google-genai>=3.0.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
