[project]
name = "chat-with-codebase-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-google-genai>=3.0.2",
    "langchain-groq>=1.0.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg[binary]>=3.2.12",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "redis>=7.1.0",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
